--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ebibowei"
+      content="Ebibowei Portfolio ::: professional in the world of Technology ::: take a glance of my awesome projects"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
