--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ebibowei Portfolio ::: professional in the world of Technology ::: take a glance of my awesome projects"
+      content="Ebibowei Nabena, is passionate about the ability of data to convey compelling stories and drive positive business outcomes."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
